# Rust-Professional

./: .gitignore  Cargo.toml  algorithm1  report.json
exercises/easy/: algorithm1.rs  algorithm10.rs  algorithm11.rs  algorithm12.rs  algorithm13.rs  algorithm14.rs  algorithm15.rs  algorithm16.rs  algorithm17.rs  algorithm18.rs  algorithm19.rs  algorithm2.rs  algorithm20.rs  algorithm3.rs  algorithm4.rs  algorithm5.rs  algorithm6.rs  algorithm7.rs  algorithm8.rs  algorithm9.rs
exercises/hard/solutiont1/src/: conjecture.rs  main.rs
exercises/hard/solutiont2/: Cargo.toml
exercises/hard/solutiont2/src/: main.rs  prime_factor.rs
exercises/hard/solutiont3/src/: district.rs
exercises/hard/solutiont4/src/: calc_time.rs  main.rs
exercises/normal/solution1/src/: count_distinct.rs
exercises/normal/solution2/src/: converter.rs  main.rs
exercises/normal/solution3/src/: calc_logic.rs  main.rs
exercises/normal/solution4/src/: main.rs  rec_mc.rs
exercises/normal/solution5/src/: fibnacci.rs
src/: main.rs
