[package]
name = "cargotest"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
termion = "1.5"
log = "0.4"
log4rs = "1.0"

[[test]]
name = "algorithm1"
path = "exercises/easy/algorithm1.rs"

[[test]]
name = "algorithm2"
path = "exercises/easy/algorithm2.rs"

[[test]]
name = "algorithm3"
path = "exercises/easy/algorithm3.rs"